--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+twitter.oauth.consumerKey=21iXdEEps79jZX1iEDR7OFKoi
+twitter.oauth.consumerSecret=ZRZoKLm42V0bGdhZ6E7a73WZZbBlOyPP97F4rElWy4THZIZwzl
+twitter.oauth.accessToken=802886412169256960-ZCh22x2BOJSPF9VDVwl9HHFRBVQyqNg
+twitter.oauth.accessTokenSecret=OEC8KIT9D7OwMSFftPth5V5KHQJy3cN9GJ5ejugvs2zsT
