--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ twitter.oauth.accessTokenSecret=OEC8KIT9D7OwMSFftPth5V5KHQJy3cN9GJ5ejugvs2zsT
 #### Telegram Auth
 telegram.bot.username=teleresistance_bot
 telegram.bot.token=6070612880:AAGZMXNMlPlQm8nYVBRQbmYQvHOWDSxYtvU
+
+#### MS Translator Auth
+microsoft.translator.key=3cc5a68307c844969277c9a3dce8fc81
+microsoft.translator.region=germanywestcentral
