--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,11 @@
             <artifactId>jaxb-api</artifactId>
             <version>2.3.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-ai-translation-text</artifactId>
+            <version>1.0.0-beta.1</version>
+        </dependency>
     </dependencies>
 
     <build>
