--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 #### Twitter Auth
-twitter.oauth.consumerKey=0BSDuUJ5I4txP0LDEdcpWScbz
-twitter.oauth.consumerSecret=LVPHlshPMZZlNpSohkABUrlVfbbmYDurR8IwcgYN4LUIWiiVyq
-twitter.oauth.accessToken=802886412169256960-JNAZilYMzqexHWRdtuWuPvENqShis4p
-twitter.oauth.accessTokenSecret=irIezNjxQu8u2v0ZKLw3y2SCR2XgqkKD341uy8k5Srf2g
+twitter.oauth.consumerKey=xxxx
+twitter.oauth.consumerSecret=xxxx
+twitter.oauth.accessToken=xxxx
+twitter.oauth.accessTokenSecret=xxxx
 
 #### Telegram Auth
-telegram.bot.username=teleresistance_bot
-telegram.bot.token=6070612880:AAGZMXNMlPlQm8nYVBRQbmYQvHOWDSxYtvU
+telegram.bot.username=xxxx
+telegram.bot.token=xxxx
 
 #### MS Translator Auth
-microsoft.translator.key=3cc5a68307c844969277c9a3dce8fc81
-microsoft.translator.region=germanywestcentral
+microsoft.translator.key=xxxx
+microsoft.translator.region=xxxx
