--- a/pom.xml
+++ b/pom.xml
@@ -31,25 +31,24 @@
 
 
     <dependencies>
-        <dependency>
+<!--        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.telegram</groupId>
             <artifactId>telegrambots-spring-boot-starter</artifactId>
             <version>6.9.7.0</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.telegram/telegrambots -->
         <!-- https://mvnrepository.com/artifact/org.telegram/telegrambots -->
        <!-- <dependency>
             <groupId>org.telegram</groupId>
@@ -57,16 +56,16 @@
             <version>2.4.0</version>
         </dependency>-->
         <!-- https://mvnrepository.com/artifact/org.springframework.social/spring-social-core -->
-        <dependency>
+<!--        <dependency>
             <groupId>org.springframework.social</groupId>
             <artifactId>spring-social-core</artifactId>
             <version>1.1.6.RELEASE</version>
-        </dependency>
-        <dependency>
+        </dependency>-->
+<!--        <dependency>
             <groupId>com.twitter</groupId>
             <artifactId>twitter-api-java-sdk</artifactId>
             <version>2.0.3</version>
-        </dependency>
+        </dependency>-->
         <!-- https://mvnrepository.com/artifact/io.github.redouane59.twitter/twittered -->
         <dependency>
             <groupId>io.github.redouane59.twitter</groupId>
@@ -79,20 +78,20 @@
             <artifactId>jaxb-api</artifactId>
             <version>2.3.1</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>com.azure</groupId>
             <artifactId>azure-ai-translation-text</artifactId>
             <version>1.0.0-beta.1</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>com.google.cloud</groupId>
             <artifactId>google-cloud-translate</artifactId>
         </dependency>
-        <dependency>
+     <!--   <dependency>
             <groupId>com.google.oauth-client</groupId>
             <artifactId>google-oauth-client</artifactId>
             <version>1.31.2</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
     <build>
