--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ telegram.bot.token=xxxx
 #### MS Translator Auth
 microsoft.translator.key=xxxx
 microsoft.translator.region=xxxx
+server.tomcat.max-threads = 1
